<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:key="setting_show_preview"
        android:title="@string/show_preview"
        android:summaryOff="@string/show_preview_summaryoff"
        android:summaryOn="@string/show_preview_on"
        android:defaultValue="true"/>
    <EditTextPreference
        android:key="setting_np_text_format"
        android:title="@string/np_text_format"
        android:summary="@string/np_text_format_summary"
        android:defaultValue="@string/np_text_format_default"/>
    <PreferenceCategory
        android:title="@string/pref_album_art_settings"
        android:key="album_art_settings_group">
        <CheckBoxPreference 
	        android:key="setting_insert_albumart"
	        android:title="@string/enable_insert_albumart"
	        android:summary="@string/insert_albumart"
	        android:defaultValue="false"/>
        <ListPreference 
            android:key="setting_albumart_format"
            android:title="@string/album_art_format"
            android:dependency="setting_show_albumart"
            android:entries="@array/album_art_format_entries"
            android:entryValues="@array/album_art_format_entry_values"
            android:summary="@string/album_art_format_summary"/>
    </PreferenceCategory>
    
    
</PreferenceScreen>